<resources>
    <string name="app_name">PiCar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_card_view">Rides</string>
    <string name="select_driver">Select Driver</string>


    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>

    <string name="google_maps_key">AIzaSyAvQoPc9frRXZfH7huDMPYXSsYQLOfIG0A</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="Name">Nom:    </string>
    <string name="FirstName">First name:    </string>
    <string name="Phone">Phone: </string>
    <string name="Email">Email: </string>
    <string name="Password">Password:   </string>
    <string name="SignIn">Sign In</string>
    <string name="title_register">Register</string>
    <string name="title_ride_status">Waiting Response</string>
    <string name="title_activity_slash">SlashActivity</string>

</resources>
