<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="@dimen/label_width"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Name" />

            <EditText
                android:id="@+id/Name"
                android:layout_width="@dimen/textView_width"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvFamily_name"
                android:layout_width="@dimen/label_width"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Family name" />

            <EditText
                android:id="@+id/FamilyName"
                android:layout_width="@dimen/textView_width"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="@dimen/label_width"
                android:layout_height="wrap_content"
                android:layout_weight="1.3"
                android:text="@string/Password" />

            <EditText
                android:id="@+id/Password"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:inputType="text|textPassword" />

            <CheckBox
                android:id="@+id/visiblePassword"
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.65"
                android:drawableEnd="@android:drawable/ic_menu_view"
                android:drawableRight="@android:drawable/ic_menu_view" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="@dimen/label_width"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Email" />

            <EditText
                android:id="@+id/Email"
                android:layout_width="@dimen/textView_width"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="@dimen/label_width"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Phone" />

            <EditText
                android:id="@+id/Phone"
                android:layout_width="@dimen/textView_width"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <Button
            android:id="@+id/SignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/SignIn" />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>